--- a/Chemie/alkohole.html
+++ b/Chemie/alkohole.html
@@ -6,6 +6,8 @@
     <script src="../assets/insertChapterHTML.js"></script>
     <script src="../assets/mathJax.js"></script>
 
+    <script src="https://3Dmol.org/build/3Dmol.js"></script>
+
     <script
       type="text/javascript"
       id="MathJax-script"
@@ -143,6 +145,160 @@
         </table>
       </div>
       <h2>Nomenklatur</h2>
+      <p>
+        Die Nomenklatur der Alkanole folgt im Gro&beta;en und Ganzen den
+        gleichen Regeln wie jene der Alkane. Die Hydroxygruppe wird durch die
+        Endung -ol im Namen angegeben. Die wichtigsten Unterschiede zur
+        Nomenklatur der Alkane / Alkene sind:
+      </p>
+      <ol>
+        <li>
+          <p>
+            Die Hauptkette wird so gewählt, dass sie das Kohlenstoffatom das die
+            Hydroxygruppe trägt enthält, auch wenn sie dann nicht mehr die
+            längste Kohlenstoff-Kette im Molekül ist.
+          </p>
+        </li>
+        <li>
+          <p>
+            Die Hauptkette wird so durchnummeriert dass das Kohlenstoffatom, das
+            die Hydroxygruppe trägt, die kleinst mögliche Zahl erhält, auch wenn
+            eventuell vorhandene Alkylgruppen sonst niedrigere Positionen
+            erhalten hätten.
+          </p>
+        </li>
+      </ol>
+      <h2>Physikalische Eigenschaften</h2>
+      <p>
+        Die physikalischen Eigenschaften werden durch die Hydroxygruppe stark
+        beeinflusst:
+      </p>
+      <ul>
+        <li>
+          <p>
+            Durch die polare Hydroxygruppe und den gewinkelten Aufbau sind die
+            Alkanolmoleküle Dipole.
+          </p>
+        </li>
+        <li>
+          <p>
+            Zwischen den Molekülen können sich Wasserstoffbrückenbindungen
+            ausbilden.
+          </p>
+        </li>
+      </ul>
+
+      <!-- this begins -->
+      <!-- 3dmol dengens vun avogadro dra maachen! -->
+      <!-- ends -->
+      <img
+        src="img/Alkohole/PolariserungAlkohol.png"
+        alt="elektrostatisches potential eines Alkohols"
+        class="zeichnungen"
+      />
+      <h2>Siedepunkte</h2>
+      <p>
+        Durch die Wasserstoffbrückenbindungen wirken zwischen Alkanolmolekülen
+        insgesamt wesentlich stärkere zwischenmolekulare Kräfte als zwischen
+        Alkanmolekülen.
+      </p>
+      <ol>
+        <li>
+          <p>
+            In kurzkettigen Alkanolen stellen die Wasserstoffbrückenbindungen
+            den grö&beta;ten Teil der zwischenmolekularen Kräfte. Ihr Siedepunkt
+            ist wesentlich höher als jener der vergleichbaren Alkane, die keine
+            Wasserstoffbrückenbindungen bilden können.
+          </p>
+        </li>
+        <li>
+          <p>
+            In langkettigen Alkanolen nimmt der Anteil der van-der-Waals-Kräfte
+            an den gesamten zwischenmolekularen Kräften zu, so dass der Einfluss
+            der Wasserstoffbrückenbindungen kleiner wird. Die Siedepunkte der
+            Alkanole und der Alkane mit ähnlicher molarer Masse nähern sich an.
+          </p>
+        </li>
+      </ol>
+      <h2>Löslichkeit</h2>
+      <p>
+        Die niedrigen Alkohole bis zu Propanol sind in allen Verhältnissen in
+        Wasserlöslich. Ab dem Butanol nimmt die löslichkeit mit steigender
+        Anzahl an $\ce{C}$-Atomen ab.
+      </p>
+      <ul>
+        <li>
+          <p>
+            Ist die Kohlenstoffkette nur sehr klein, so hat sie nur einen
+            geringen Einfluss auf das Lö̈sungsverhalten. Das Lösungsverhalten
+            wird durch die hydrophile Hydroxygruppe bestimmt. Kurzkettige
+            Alkohole (Methanol, Ethanol, Propanol) sind in allen Verhältnissen
+            in Wasser löslich.
+          </p>
+          <img src="img/Alkohole/2C.png" alt="" class="zeichnungen" />
+        </li>
+        <li>
+          <p>
+            Ist die Kohlenstoffkette länger als 4 $\ce{C}$-Atome, so überwiegen
+            ihre hydrophoben Eigenschaften und der Alkohol ist unlöslich.
+          </p>
+          <img src="img/Alkohole/4C.png" alt="" class="zeichnungen" />
+        </li>
+      </ul>
+      <h2>Verbrennung</h2>
+      <h3>Formel</h3>
+      <p>Alkohole verbrennen mit Sauerstoff zu Kohlenstoffdioxid und Wasser.</p>
+      <!-- Allgemeng Formel? -->
+      <h2>Alkoholatbildung</h2>
+      <p>
+        Genau wie Wasser reagieren auch Alkohole mit Alkalimetallen unter
+        Wasserstoffentwicklung. Genau wie Wasser enthalten auch Alkoholmoleküle
+        ein $\delta \bigoplus $ polarisiertes Wasserstoffatom, welches für die
+        Reaktion mit Alkalimetallen verantwortlich ist.
+      </p>
+      <h3>Formel</h3>
+      $$ \ce{2R-OH + 2Na -> 2R-O- + 2Na+ + H2} $$
+      <img
+        src="img/Alkohole/Alkoholatbildung.png"
+        alt="Alkoholatbildung"
+        class="zeichnungen"
+      />
+      <h2>Substitution</h2>
+      <p>
+        Eine Reaktion bei der ein Atom oder eine Atomgruppe eines Moleküls durch
+        ein anderes Atom oder eine andere Atomgruppe ersetzt wird bezeichnet man
+        als Substitution.
+      </p>
+      <h2>Darstellung von Alkoholen durch nukleophile Substitution</h2>
+      <h3>Hier</h3>
+      <p>
+        Bromethan reagiert in alkalischer Lo ̈sung unter Bildung von Ethanol:
+      </p>
+      $$ \ce{C2H5-Br + OH–_{(aq)} <=> C2H5-OH + Br–} $$
+      <h2>Nukleophiler Angriff</h2>
+      <p>
+        Die erste Etappe dieser Reaktion ist der Angriff des Hydroxidions auf
+        eine Region mit positiver Ladungsdichte. Man bezeichnet dies als
+        nukleophilen Angriff.
+      </p>
+      <img
+        src="img/Alkohole/Nukleophiler Angriff.png"
+        alt="Nukleophiler Angriff"
+        class="zeichnungen"
+      />
+      <h2>Mehrwertige Alkohole</h2>
+      <p>
+        Mehrwertige Alkohole besitzen zwei oder mehrere Hydroxygruppe in ihren
+        Molekülen. <br />
+
+        Je nach Anzahl der Hydroxygruppen bezeichnet man sie als <u>Diole</u>,
+        <u>Triole</u> oder <u>Polyole</u>.
+      </p>
+      <p>
+        Durch die grö&beta;ere Anzahl an Hydroxygruppen bilden die mehrwertigen
+        Alkohole auch mehr Wasserstoffbrücken aus. Es bestehen stärkere
+        zwischenmolekularen Kräfte als zwischen einwertigen Alkanolen.
+      </p>
     </div>
     <div class="scrollButton">
       <a href="#">Zeréck no uewen</a>
