--- a/Elektrotechnik/halbleiter.html
+++ b/Elektrotechnik/halbleiter.html
@@ -144,6 +144,11 @@
         Loches, die Löcherbewegung, die der Elektronenbewegung entgegengesetzt
         ist.
       </p>
+      <h2>PN-Übergang</h2>
+      <p>
+        Der Grenzbereich zwischen einer P-leitenden Zone und einer N-leitenden
+        Zone wird PN- Übergang genannt.
+      </p>
     </div>
     <div class="scrollButton">
       <a href="#">Zeréck no uewen</a>
