--- a/changeLog.html
+++ b/changeLog.html
@@ -112,10 +112,16 @@
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
             <h3>Update 39</h3>
-            <time>.3.2023</time>
+            <time>16.4.2023</time>
             <ul>
               <li class="changeLogText">
                 Neit Kapitel an der Chemie: Alkohole
+              </li>
+              <li class="changeLogText">
+                Neit Kapitel an der Elektrotechnik: Halbleiterdiode
+              </li>
+              <li class="changeLogText">
+                Neit Kapitel an der Elektrotechnik: Transistor
               </li>
               <li class="changeLogText">
                 Neit Kapitel an der Informatik: Java Problèmes Types
@@ -127,7 +133,7 @@
                 Neit Kapitel an der Technologie: Stirling Motor
               </li>
               <li class="changeLogText">
-                Ergänzungen am Kapitel: Festigkeitslehre
+                Ergänzungen am Kapitel: Festigkeitslehre, Halbleiter
               </li>
               <li class="changeLogText">
                 Ännerungen an Ergänzungen am Kapitel: Quantenmechanik
