--- a/Elektrotechnik/index.html
+++ b/Elektrotechnik/index.html
@@ -81,6 +81,9 @@
       <h2>Bauteile</h2>
       <ol>
         <li value="13">
+          <a href="halbleiterdiode.html" class="indexLink">Halbleiterdiode</a>
+        </li>
+        <li>
           <a href="kondensator.html" class="indexLink">Kondensator</a>
         </li>
         <li>
@@ -95,6 +98,9 @@
         </li>
         <li>
           <a href="transformator.html" class="indexLink">Transformator</a>
+        </li>
+        <li>
+          <a href="transistor.html" class="indexLink">Transistor</a>
         </li>
       </ol>
     </div>
