--- a/Chemie/aldehydeUndKetone.html
+++ b/Chemie/aldehydeUndKetone.html
@@ -82,6 +82,11 @@
         keine Wasserstoffbrückenbindungen bilden da sie kein $\Delta \bigoplus$
         geladenes Wasserstoffatom enthält.
       </p>
+      <img
+        src="img/AldehydeUndKetone/physikalischeEigenschaften.png"
+        alt="Carbonylverbindungen"
+        class="zeichnungen"
+      />
       <p>
         Die vorherrschenden zwischenmolekularen Kräfte in den Aldehyden und
         Ketonen sind Dipol- Dipol-Wechselwirkungen und van-der-Waals-Kräfte.
@@ -148,19 +153,31 @@
       <p>
         Aldehyde entstehen bei der sanften Oxidation von primären Alkoholen.
       </p>
-      <p>//ZEECHNUNG</p>
+      <img
+        src="img/AldehydeUndKetone/aldehyden.png"
+        alt="Darstellung von aldehyden"
+        class="zeichnungen"
+      />
       <h2>Darstellung von Ketonen</h2>
       <p>
         Ketone entstehen bei der sanften Oxidation von sekundären Alkoholen.
       </p>
-      <p>//ZEECHNUNG</p>
+      <img
+        src="img/AldehydeUndKetone/ketone.png"
+        alt="Darstellung von ketone"
+        class="zeichnungen"
+      />
       <h2>Silberspiegelprobe</h2>
       <p>
         Aldehyde werden durch Silberionen in alkalischer Lösung zu Carbonsäuren
         oxidiert. Bei der Reaktion entsteht metallisches Silber, welches sich
         als ”Silberspiegel” an den Gefäßwänden absetzen kann.
       </p>
-      <p>//ZEECHNUNG</p>
+      <img
+        src="img/AldehydeUndKetone/Silberspiegelprobe.png"
+        alt="Silberspiegelprobe"
+        class="zeichnungen"
+      />
       <p>
         Ketone können nicht durch Silberionen zu Carbonsäuren oxidiert werden.
         Sie reagieren nicht in der Silberspiegel-Probe.
