--- a/Chemie/carbonsaueren.html
+++ b/Chemie/carbonsaueren.html
@@ -28,7 +28,11 @@
         Carbonsäuren sind gekennzeichnet durch Anwesenheit einer Carboxygruppe
         $\ce{R-COOH}$.
       </p>
-      <p>//ZEECHNUNG</p>
+      <img
+        src="img/Carbonsaeuren/carboxygruppe.png"
+        alt="Carboxygruppe"
+        class="zeichnungen"
+      />
       <h2>Nomenklatur</h2>
       <p>
         Zur Benennung wird das Suffix -säure an den Namen des entsprechenden
@@ -98,7 +102,11 @@
         Anziehungskräfte sind so stark dass jeweils zwei Alkansäuremoleküle eine
         Tendenz haben, sich zu Doppel- molekülen (Dimeren) zu verbinden.
       </p>
-      <p>//ZEECHNUNG</p>
+      <img
+        src="img/Carbonsaeuren/Dimeren.png"
+        alt="Dimeren"
+        class="zeichnungen"
+      />
       <p>
         Die Siedepunkte der Alkansäuren liegen noch über denen der
         entsprechenden Alkanole.
@@ -203,6 +211,11 @@
         van-der-Waals-kräfte an den gesamten zwischenmolekularen Kräften. Die
         Löslichkeit nimmt mit steigender Größe des Alkylrests ab.
       </p>
+      <img
+        src="img/Carbonsaeuren/WBBIncarboxygruppe.png"
+        alt="WBBInCarboxygruppe"
+        class="zeichnungen"
+      />
     </div>
     <div class="scrollButton">
       <a href="#">Zeréck no uewen</a>
