--- a/Chemie/index.html
+++ b/Chemie/index.html
@@ -60,6 +60,14 @@
         <li>
           <a href="alkohole.html" class="indexLink">Alkohole</a>
         </li>
+        <li>
+          <a href="carbonsaueren.html" class="indexLink">Carbonsäuren</a>
+        </li>
+        <li>
+          <a href="aldehydeUndKetone.html" class="indexLink"
+            >Aldehyde und Ketone</a
+          >
+        </li>
       </ol>
 
       <h3>Bemierkung</h3>
