--- a/changeLog.html
+++ b/changeLog.html
@@ -112,10 +112,16 @@
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
             <h3>Update 39</h3>
-            <time>16.4.2023</time>
+            <time>17.4.2023</time>
             <ul>
               <li class="changeLogText">
                 Neit Kapitel an der Chemie: Alkohole
+              </li>
+              <li class="changeLogText">
+                Neit Kapitel an der Chemie: Aldehyde und Ketone
+              </li>
+              <li class="changeLogText">
+                Neit Kapitel an der Chemie: Carbonsäuren
               </li>
               <li class="changeLogText">
                 Neit Kapitel an der Elektrotechnik: Halbleiterdiode
