--- a/Archiv/index.html
+++ b/Archiv/index.html
@@ -35,6 +35,9 @@
             <li>
               <a href="Chimie/pdf/Organische Chemie/Alkohole.pdf">Alkanole</a>
             </li>
+            <li>
+              <a href="Chimie/pdf/Organische Chemie/Aldehyde.pdf">Alkanole</a>
+            </li>
           </ul>
         </li>
       </ol>
@@ -47,6 +50,16 @@
               <a
                 href="Elektrotechnik/pdf/RLC Reihenschaltung/RLC - Reihenschaltungen.pdf"
                 >RLC Reihenschaltung</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li>
+          <p><u>Bauteile</u></p>
+          <ul>
+            <li>
+              <a href="Elektrotechnik/pdf/Transistor/Transistor.pdf"
+                >Transistor</a
               >
             </li>
           </ul>
@@ -114,19 +127,6 @@
       <h2>Physik</h2>
       <ol>
         <li>
-          <p><u>Wellenoptik</u></p>
-          <ul>
-            <li>
-              <a href="Physik/pdf/Wellenoptik/Wellenoptik.pdf">Wellenoptik</a>
-            </li>
-            <li>
-              <a href="Physik/pdf/Wellenoptik/Duenne Schichten.pdf"
-                >Dünne Schichten</a
-              >
-            </li>
-          </ul>
-        </li>
-        <li>
           <p><u>Radioaktivität</u></p>
           <ul>
             <li>
@@ -141,6 +141,29 @@
           <ul>
             <li>
               <a href="Physik/pdf/Relativitaet/Relativitaet.pdf">Relativität</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <p><u>Strahlenoptik</u></p>
+          <ul>
+            <li>
+              <a href="Physik/pdf/Strahlenoptik/Strahlenoptik.pdf"
+                >Strahlenoptik</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li>
+          <p><u>Wellenoptik</u></p>
+          <ul>
+            <li>
+              <a href="Physik/pdf/Wellenoptik/Wellenoptik.pdf">Wellenoptik</a>
+            </li>
+            <li>
+              <a href="Physik/pdf/Wellenoptik/Duenne Schichten.pdf"
+                >Dünne Schichten</a
+              >
             </li>
           </ul>
         </li>
