--- a/Archiv/index.html
+++ b/Archiv/index.html
@@ -36,7 +36,9 @@
               <a href="Chimie/pdf/Organische Chemie/Alkohole.pdf">Alkanole</a>
             </li>
             <li>
-              <a href="Chimie/pdf/Organische Chemie/Aldehyde.pdf">Alkanole</a>
+              <a href="Chimie/pdf/Organische Chemie/Aldehyde und Ketone.pdf"
+                >Alkanole</a
+              >
             </li>
           </ul>
         </li>
