--- a/changeLog.html
+++ b/changeLog.html
@@ -138,6 +138,7 @@
               <li class="changeLogText">
                 Neit Kapitel an der Technologie: Stirling Motor
               </li>
+              <li class="changeLogText">Nei Exercicer!</li>
               <li class="changeLogText">
                 Ergänzungen am Kapitel: Festigkeitslehre, Halbleiter
               </li>
