--- a/Physik/index.html
+++ b/Physik/index.html
@@ -86,6 +86,11 @@
             >Quanten&shy;mechanik</a
           >
         </li>
+        <li>
+          <a href="formelsammlungQuantenmechanik.html" class="indexLink"
+            >Formelsammlung Quanten&shy;mechanik</a
+          >
+        </li>
       </ol>
       <h2>Relativitätstheorie</h2>
       <ol>
