--- a/Physik/radioaktivitaet.html
+++ b/Physik/radioaktivitaet.html
@@ -29,7 +29,7 @@
           <p>$Z$: Kernladungszahl äquivalent zur Ordnungszahl</p>
         </li>
         <li>
-          <p>$N$: Antzahl aus Neutronen</p>
+          <p>$N$: Anzahl an Neutronen</p>
         </li>
         <li>
           <p>$A$: Massenzahl</p>
@@ -162,7 +162,7 @@
             Zustand oder manchmal dem Grundzustand verändert.
           </p>
           <p><u>Zerfallsgleichung:</u></p>
-          $$ \ce{^A_Z K^* -> ^A_Z K^* + \gamma} $$
+          $$ \ce{^A_Z K^* -> ^A_Z K + \gamma} $$
         </li>
       </ul>
       <h2>Nomenklatur der Antimaterie</h2>
