--- a/Technologie/index.html
+++ b/Technologie/index.html
@@ -39,6 +39,9 @@
         <li>
           <a href="waermepumpe.html" class="indexLink">Wärmepumpe</a>
         </li>
+        <li>
+          <a href="kernkraftwerke.html" class="indexLink">Kernkraftwerke</a>
+        </li>
       </ol>
     </div>
   </body>
