--- a/changeLog.html
+++ b/changeLog.html
@@ -104,6 +104,9 @@
               <li>
                 <p>luxformel huet 20 000 linne codage errescht - 6.1.2023</p>
               </li>
+              <li>
+                <p>luxformel huet 50 Kapitelen erreecht - 17.4.2023</p>
+              </li>
             </ul>
           </blockquote>
           <hr />
@@ -111,6 +114,27 @@
             <h2>Ännerungen</h2>
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
+            <h3>Update 40</h3>
+            <time>23.4.2023</time>
+            <ul>
+              <li class="changeLogText">
+                Neit Kapitel an der Physik: Formelsammlung Quantenmechanik
+              </li>
+              <li class="changeLogText">
+                Neit Kapitel an der Technologie: Kernkraftwerke
+              </li>
+              <li class="changeLogText">Nei Exercicer: Quantenmechanik</li>
+              <li class="changeLogText">
+                Ergänzungen am Kapitel Quantenmechanik
+              </li>
+              <li class="changeLogText">
+                Feeler am Kapitel Radioaktivität goufe verbessert
+              </li>
+              <li class="changeLogText">
+                Net all Kapitele goufen am Search ugewiesen
+              </li>
+              <li class="changeLogText">Nei Spréch!</li>
+            </ul>
             <h3>Update 39</h3>
             <time>17.4.2023</time>
             <ul>
