--- a/Archiv/index.html
+++ b/Archiv/index.html
@@ -42,18 +42,34 @@
             </li>
           </ul>
         </li>
+        <li>
+          <p><u>Gehaltsangaben</u></p>
+          <li>
+              <a href="Chimie/pdf/Gehaltsangaben/Gehaltsangaben.pdf">Alkane</a>
+            </li>
+        </li>
+        <li>
+          <p><u>Kunststoffe</u></p>
+          <li>
+               <a href="Chimie/pdf/Kunststoffe/Kunststoffe.pdf">Alkane</a>
+          </li>
+        </li>
       </ol>
       <h2>Elektrotechnik</h2>
       <ol>
         <li>
-          <p><u>RLC, RL, RC Schaltungen</u></p>
+          <p><u>Schaltungen</u></p>
           <ul>
             <li>
               <a
-                href="Elektrotechnik/pdf/RLC Reihenschaltung/RLC - Reihenschaltungen.pdf"
+                href="Elektrotechnik/pdf/Schaltungen/RLC - Reihenschaltungen.pdf"
                 >RLC Reihenschaltung</a
               >
             </li>
+            <li><a
+                href="Elektrotechnik/pdf/Schaltungen/Gleichrichterschaltung.pdf"
+                >Gleichrichterschaltung</a
+              ></li>
           </ul>
         </li>
         <li>
@@ -63,6 +79,12 @@
               <a href="Elektrotechnik/pdf/Transistor/Transistor.pdf"
                 >Transistor</a
               >
+            </li>
+            <li>
+              <a href="Elektrotechnik/pdf/Dioden/Dioden.pdf">Dioden</a>
+            </li>
+            <li>
+              <a href="Elektrotechnik/pdf/Dioden/LED.pdf">LED</a>
             </li>
           </ul>
         </li>
@@ -77,7 +99,18 @@
                 >Produit Vectorielle</a
               >
             </li>
+            <!-- <li>
+              <a href="Mathe/pdf/Geometrie/Produit Vectorielle.pdf"
+                >Produit Vectorielle</a
+              >
+            </li> -->
           </ul>
+        </li>
+        <li>
+          <p><u>Nombres Complexes</u></p>
+          <li>
+            <a href="Mathe/pdf/Nombres Complexes/Nombres Complexes.pdf">Nombres Complexes</a>
+          </li>
         </li>
         <li>
           <p><u>Intégration</u></p>
