--- a/Technologie/kernkraftwerke.html
+++ b/Technologie/kernkraftwerke.html
@@ -105,7 +105,57 @@
         Spaltprodukt reflektiert.
       </p>
       <h2>Wechselwirkung zwischen Neutron und Kern</h2>
-      <p>Wenn ein Neutron auf</p>
+      <p>
+        Wenn ein Neutron auf ein Atomkern trifft so gibt es 3 verschiedene
+        Möglichkeiten wie sie mit einander reagieren können. Diese sind
+        <i>Spaltung</i>, <i>Streuung</i>, <i>Absorption</i>. <br />
+        Alle genannten Reaktionen sind möglich, sie hängen also von der
+        statistischen Wahrscheinlichkeit der Reaktion ab, und das unabhängig von
+        der Geschwindigkeit der Neutronen.
+      </p>
+      <div class="xScrollable">
+        <table>
+          <tr>
+            <th>
+              <p>Bezeichnung</p>
+            </th>
+            <th>
+              <p>Neutrongeschwindigkeit</p>
+            </th>
+          </tr>
+          <tr>
+            <td><p>schnelle Neutronen</p></td>
+            <td><p>$>10^7 \frac{m}{s}$</p></td>
+          </tr>
+          <tr>
+            <td><p>mittelschnelle Neutronen</p></td>
+            <td><p>$>10^5 \frac{m}{s}$ bis $>10^7 \frac{m}{s}$</p></td>
+          </tr>
+          <tr>
+            <td><p>langsame Neutronen</p></td>
+            <td><p>$>10^5 \frac{m}{s}$</p></td>
+          </tr>
+        </table>
+      </div>
+      <ol>
+        <li>
+          <b>Spaltung</b>
+          <p>Man unterscheidet zwischen:</p>
+          <ul>
+            <li>
+              <b>Kerne mit gerader Massenanzahl</b> <br />
+              <p>
+                Ein Neutron kann ein Kern mit gerader Massenzahl spalten, wenn
+                das Neutron ein schnelles Neutron ist.
+              </p>
+            </li>
+            <li>
+              <b>Kerne mit ungerader Massenanzahl</b> <br />
+              <p>Hier kann auch ein langsames Neutron den Kern spalten.</p>
+            </li>
+          </ul>
+        </li>
+      </ol>
     </div>
     <div class="scrollButton">
       <a href="#">Zeréck no uewen</a>
