--- a/changeLog.html
+++ b/changeLog.html
@@ -105,7 +105,7 @@
                 <p>luxformel huet 20 000 linne codage errescht - 6.1.2023</p>
               </li>
               <li>
-                <p>luxformel huet 50 Kapitelen erreecht - 17.4.2023</p>
+                <p>luxformel huet 100 Kapitelen erreecht - 17.4.2023</p>
               </li>
             </ul>
           </blockquote>
@@ -114,6 +114,17 @@
             <h2>Ännerungen</h2>
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
+            <h3>Update 41</h3>
+            <time>21.5.2023</time>
+            <ul>
+              <li class="changeLogText">
+                Ergänzungen am Kapitel: Kernkraftwerke
+              </li>
+              <li class="changeLogText">
+                Nei Exercicer: Dioden, LED, Gehaltsangaben, Produit Vectoriel,
+                Nombres Complexes, Gleichrichterschaltungen, Kunststoffe
+              </li>
+            </ul>
             <h3>Update 40</h3>
             <time>23.4.2023</time>
             <ul>
