--- a/Archiv/index.html
+++ b/Archiv/index.html
@@ -45,13 +45,13 @@
         <li>
           <p><u>Gehaltsangaben</u></p>
           <li>
-              <a href="Chimie/pdf/Gehaltsangaben/Gehaltsangaben.pdf">Alkane</a>
+              <a href="Chimie/pdf/Gehaltsangaben/Gehaltsangaben.pdf">Gehaltsangaben</a>
             </li>
         </li>
         <li>
           <p><u>Kunststoffe</u></p>
           <li>
-               <a href="Chimie/pdf/Kunststoffe/Kunststoffe.pdf">Alkane</a>
+               <a href="Chimie/pdf/Kunststoffe/Kunststoffe.pdf">Kunststoffe</a>
           </li>
         </li>
       </ol>
